tutorial image links and z-index fixes

--- a/tutorial.styl
+++ b/tutorial.styl
@@ -7,6 +7,7 @@ GREY = #8f8f8f
   bottom 0px
   background-color rgba(0, 72, 91, 0.7)
   user-select none
+  z-index 1
   .tutorial-slide
     position relative
     margin 50px auto 0 auto
